[package]
name = "sabreur"
version = "0.7.0"
authors = ["Anicet Ebou <anicet.ebou@gmail.com>"]
edition = "2018"
description = "sabreur is a barcode demultiplexing tool for fasta and fastq files"
homepage = "https://github.com/Ebedthan/sabreur"
repository = "https://github.com/Ebedthan/sabreur"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["bioinformatics", "demultiplexing"]

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4.5.37", features = ["derive"] }
exitcode = "1.1.2"
fern = { version = "0.6", features = ["colored"] }
log = "0.4"
niffler = "2.5"
needletail = { version = "0.5", features = ["compression"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
triple_accel = "0.4"

[profile.release]
opt-level = 3
debug = true
overflow-checks = false
lto = 'thin'
panic = 'abort'
incremental = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bin]]
name = "sabreur"
path = "src/main.rs"
bench = false
